--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -13,6 +13,11 @@
 - type: rss
   icon: "fas fa-rss"
   noblank: true
+
+- type: itch
+  icon: "fa-brands fa-itch-io"
+  url: "https://victor9955.itch.io/"
+
 # Uncomment and complete the url below to enable more contact options
 #
 # - type: mastodon
