--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -3,20 +3,26 @@
 - type: github
   icon: "fab fa-github"
 
-- type: twitter
-  icon: "fa-brands fa-x-twitter"
+# - type: twitter
+#  icon: "fa-brands fa-x-twitter"
+
+- type: itch
+  icon: "fa-brands fa-itch-io"
+  url: "https://victor9955.itch.io/"
+
+- type: portfolio
+  icon: "fa-solid fa-file"
+  url: "https://victorlacombe.pb.online/"
 
 - type: email
   icon: "fas fa-envelope"
   noblank: true # open link in current tab
 
-- type: rss
-  icon: "fas fa-rss"
-  noblank: true
+#- type: rss
+#  icon: "fas fa-rss"
+#  noblank: true
 
-- type: itch
-  icon: "fa-brands fa-itch-io"
-  url: "https://victor9955.itch.io/"
+
 
 # Uncomment and complete the url below to enable more contact options
 #
