--- a/_config.yml
+++ b/_config.yml
@@ -26,10 +26,10 @@ description: >- # used by seo meta and the atom feed
 url: "https://victor9955.github.io"
 
 github:
-  username: github_username # change to your github username
+  username: Victor9955  # change to your github username
 
 twitter:
-  username: HYPEX # change to your twitter username
+  username:  # change to your twitter username
 
 social:
   # Change to your full name.
@@ -38,8 +38,8 @@ social:
   email: v.lacombe.student@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your twitter homepage
-    - https://github.com/username # change to your github homepage
+    # - https://twitter.com/username # change to your twitter homepage
+    # - https://github.com/username # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
